overflow y issue resolved

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ span {
 
 body {
   background-size: cover;
+  overflow-y: hidden !important;
 }
 
 .fa-2x {
@@ -657,7 +658,6 @@ body {
 #content {
   position: relative;
   z-index: 2;
-  /* padding: 30px; */
   text-align: center;
   font-weight: bold;
   font-family: Arial, sans-serif;
